--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@astrojs/react": "^1.2.2",
+    "@emotion/react": "^11.10.5",
+    "@mantine/core": "^5.8.2",
+    "@mantine/hooks": "^5.8.2",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^1.6.10",
