--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^0.12.1",
     "@astrojs/react": "^1.2.2",
     "@emotion/react": "^11.10.5",
     "@mantine/core": "^5.8.2",
