--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@emotion/react": "^11.10.5",
     "@mantine/core": "^5.8.2",
     "@mantine/hooks": "^5.8.2",
-    "@types/react": "^18.0.21",
+    "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.6",
     "astro": "^1.6.10",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-hot-toast": "^2.4.0"
   }
 }
