--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/mdx": "^0.12.1",
     "@astrojs/react": "^1.2.2",
+    "@astrojs/rss": "^2.1.1",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.6",
     "astro": "^2.0.1",
