--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.6",
     "astro": "^2.0.1",
+    "astro-icon": "^0.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hot-toast": "^2.4.0"
