--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.0.6",
     "astro": "^2.0.1",
     "astro-icon": "^0.8.0",
+    "astro-robots-txt": "^0.4.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hot-toast": "^2.4.0"
