--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^0.12.1",
+    "@astrojs/prefetch": "^0.1.2",
     "@astrojs/react": "^1.2.2",
     "@astrojs/rss": "^2.1.1",
     "@types/react": "^18.0.26",
