--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@astrojs/prefetch": "^0.1.2",
     "@astrojs/react": "^1.2.2",
     "@astrojs/rss": "^2.1.1",
+    "@astrojs/vercel": "^3.1.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.6",
-    "astro": "^2.0.1",
+    "astro": "^2.0.16",
     "astro-icon": "^0.8.0",
     "astro-robots-txt": "^0.4.0",
     "react": "^18.0.0",
