--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^0.12.1",
     "@astrojs/prefetch": "^0.1.2",
     "@astrojs/react": "^1.2.2",
+    "@astrojs/rss": "^2.1.1",
     "@astrojs/vercel": "^3.1.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.6",
