--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@ name: Deploy to Vercel
 
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "35 0 * * *"
+  workflow_dispatch:
 
 jobs:
   deploy:
