--- a/package.json
+++ b/package.json
@@ -16,14 +16,27 @@
     "@astrojs/react": "^1.2.2",
     "@astrojs/rss": "^2.3.2",
     "@astrojs/sitemap": "^1.2.2",
+    "@astrojs/tailwind": "^3.1.1",
     "@astrojs/vercel": "^3.2.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "astro": "^2.2.1",
     "astro-icon": "^0.8.0",
     "astro-robots-txt": "^0.4.1",
+    "class-variance-authority": "^0.5.1",
+    "clsx": "^1.2.1",
+    "lucide-react": "^0.137.0",
+    "prettier-plugin-tailwindcss": "^0.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.0"
+    "react-hot-toast": "^2.4.0",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss": "^3.0.24",
+    "tailwindcss-animate": "^1.0.5"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.7",
+    "prettier-plugin-astro": "^0.8.0"
   }
 }
