--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/sitemap": "^1.2.2",
     "@astrojs/tailwind": "^3.1.1",
     "@astrojs/vercel": "^3.2.2",
+    "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
@@ -26,6 +27,7 @@
     "astro-robots-txt": "^0.4.1",
     "class-variance-authority": "^0.5.1",
     "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
     "lucide-react": "^0.137.0",
     "prettier-plugin-tailwindcss": "^0.2.7",
     "react": "^18.2.0",
