--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "tailwindcss-animate": "^1.0.5"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "prettier": "^2.8.7",
     "prettier-plugin-astro": "^0.8.0",
     "prettier-plugin-tailwindcss": "^0.2.7"
