--- a/package.json
+++ b/package.json
@@ -13,32 +13,17 @@
   "dependencies": {
     "@astrojs/mdx": "^0.12.2",
     "@astrojs/prefetch": "^0.1.2",
-    "@astrojs/react": "^2.1.1",
+    "@astrojs/react": "^1.2.2",
     "@astrojs/rss": "^2.3.2",
     "@astrojs/sitemap": "^1.2.2",
-    "@astrojs/tailwind": "^3.1.1",
-    "@astrojs/vercel": "^3.2.3",
-    "@radix-ui/react-dialog": "^1.0.3",
-    "@radix-ui/react-dropdown-menu": "^2.0.4",
-    "@types/react": "^18.0.35",
+    "@astrojs/vercel": "^3.2.2",
+    "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
-    "astro": "^2.3.0",
+    "astro": "^2.2.1",
+    "astro-icon": "^0.8.0",
     "astro-robots-txt": "^0.4.1",
-    "class-variance-authority": "^0.5.2",
-    "clsx": "^1.2.1",
-    "cmdk": "^0.2.0",
-    "lucide-react": "^0.137.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.0",
-    "tailwind-merge": "^1.12.0",
-    "tailwindcss": "^3.3.1",
-    "tailwindcss-animate": "^1.0.5"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "prettier": "^2.8.7",
-    "prettier-plugin-astro": "^0.8.0",
-    "prettier-plugin-tailwindcss": "^0.2.7"
+    "react-hot-toast": "^2.4.0"
   }
 }
