--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrojs/vercel": "^3.2.5",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-tooltip": "^1.0.5",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "astro": "^2.3.1",
