--- a/package.json
+++ b/package.json
@@ -18,17 +18,14 @@
     "@astrojs/sitemap": "^1.3.1",
     "@astrojs/tailwind": "^3.1.2",
     "@astrojs/vercel": "^3.3.0",
-    "@radix-ui/react-dialog": "^1.0.3",
-    "@radix-ui/react-dropdown-menu": "^2.0.4",
-    "@radix-ui/react-tooltip": "^1.0.5",
+    "@fontsource/inter": "^4.5.15",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "astro": "^2.4.5",
     "astro-robots-txt": "^0.4.1",
-    "class-variance-authority": "^0.5.3",
-    "clsx": "^1.2.1",
-    "cmdk": "^0.2.0",
+    "cal-sans": "^1.0.1",
     "lucide-react": "^0.137.0",
+    "motion": "^10.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
