--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "astro": "^2.4.5",
     "astro-robots-txt": "^0.4.1",
     "cal-sans": "^1.0.1",
+    "framer-motion": "^10.12.14",
     "lucide-react": "^0.137.0",
     "motion": "^10.16.2",
     "react": "^18.2.0",
