--- a/package.json
+++ b/package.json
@@ -18,18 +18,16 @@
     "@astrojs/sitemap": "^1.3.1",
     "@astrojs/tailwind": "^3.1.2",
     "@astrojs/vercel": "^3.3.0",
-    "@fontsource/inter": "^4.5.15",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "astro": "^2.4.5",
     "astro-robots-txt": "^0.4.1",
-    "cal-sans": "^1.0.1",
     "framer-motion": "^10.12.14",
     "lucide-react": "^0.137.0",
-    "motion": "^10.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-ztext": "^1.0.3",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "^3.3.2",
     "tailwindcss-animate": "^1.0.5"
