--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "astro": "^2.4.5",
+    "astro-color-mode": "^0.7.1",
     "astro-robots-txt": "^0.4.1",
     "framer-motion": "^10.12.14",
     "lucide-react": "^0.137.0",
