--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "astro-color-mode": "^0.7.1",
     "astro-robots-txt": "^0.4.1",
     "howler": "^2.2.3",
+    "prettier": "^3.0.0",
+    "prettier-plugin-astro": "^0.11.0",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "prettier": "^2.8.8",
-    "prettier-plugin-astro": "^0.8.1",
-    "prettier-plugin-tailwindcss": "^0.2.8"
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
