upgrade to astro v3, update dependencies, remove animation on themeToggle

--- a/package.json
+++ b/package.json
@@ -11,29 +11,27 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^0.19.7",
-    "@astrojs/prefetch": "^0.3.0",
-    "@astrojs/react": "^2.2.1",
-    "@astrojs/rss": "^2.4.3",
-    "@astrojs/sitemap": "^2.0.1",
-    "@astrojs/tailwind": "^4.0.0",
-    "@astrojs/vercel": "^3.7.4",
+    "@astrojs/mdx": "^1.0.0",
+    "@astrojs/prefetch": "^0.4.0",
+    "@astrojs/react": "^3.0.0",
+    "@astrojs/rss": "^3.0.0",
+    "@astrojs/sitemap": "^3.0.0",
+    "@astrojs/tailwind": "^5.0.0",
+    "@astrojs/vercel": "^4.0.2",
     "@giscus/react": "^2.3.0",
-    "@types/react": "^18.2.12",
-    "@types/react-dom": "^18.2.5",
-    "astro": "^2.10.9",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "astro": "^3.0.5",
     "astro-color-mode": "^0.7.1",
     "astro-robots-txt": "^0.5.0",
     "howler": "^2.2.3",
-    "prettier": "^3.0.0",
-    "prettier-plugin-astro": "^0.11.0",
-    "prettier-plugin-tailwindcss": "^0.4.1",
+    "prettier": "^3.0.3",
+    "prettier-plugin-astro": "^0.12.0",
+    "prettier-plugin-tailwindcss": "^0.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "tailwindcss": "^3.3.2"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9"
+    "tailwindcss": "^3.3.3"
   }
 }
