--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trevor-lee-website",
+  "name": "trevortylerlee",
   "type": "module",
   "version": "0.0.1",
   "private": true,
@@ -18,6 +18,7 @@
     "@astrojs/sitemap": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
     "@astrojs/vercel": "^4.0.2",
+    "@fontsource/atkinson-hyperlegible": "^5.0.11",
     "@giscus/react": "^2.3.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/react": "^18.2.21",
