--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/sitemap": "^3.0.3",
     "@astrojs/tailwind": "^5.0.3",
     "@astrojs/vercel": "^6.0.0",
+    "@fontsource/atkinson-hyperlegible": "^5.0.18",
     "@giscus/react": "^2.3.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/react": "^18.2.42",
