--- a/package.json
+++ b/package.json
@@ -33,5 +33,12 @@
     "react-hot-toast": "^2.4.1",
     "sharp": "^0.32.6",
     "tailwindcss": "^3.4.1"
+  },
+  "module": "index.ts",
+  "devDependencies": {
+    "@types/bun": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   }
 }
