--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@antfu/install-pkg": "latest",
     "@astrojs/mdx": "^2.0.3",
     "@astrojs/react": "^3.0.9",
     "@astrojs/rss": "^4.0.1",
