--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.1.1",
-    "astro-icon": "^1.1.0",
+    "astro-icon": "next",
     "astro-robots-txt": "^1.0.0",
     "howler": "^2.2.4",
     "javascript-time-ago": "^2.5.9",
