--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@astrojs/sitemap": "^3.0.4",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^6.1.3",
+    "@fontsource/geist-mono": "^5.0.1",
+    "@fontsource/geist-sans": "^5.0.1",
     "@giscus/react": "^2.4.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/react": "^18.2.47",
