--- a/package.json
+++ b/package.json
@@ -27,14 +27,16 @@
     "astro-icon": "next",
     "astro-robots-txt": "^1.0.0",
     "howler": "^2.2.4",
-    "prettier": "^3.1.1",
-    "prettier-plugin-astro": "^0.12.3",
-    "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "sharp": "^0.32.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.0",
+    "prettier-plugin-astro": "^0.14.0",
+    "prettier-plugin-tailwindcss": "^0.6.1"
   }
 }
