add catalyst select, add fallback styles if javascript is disabled

--- a/package.json
+++ b/package.json
@@ -20,18 +20,21 @@
     "@astrojs/vercel": "^7.6.0",
     "@fontsource/geist-mono": "^5.0.1",
     "@fontsource/geist-sans": "^5.0.1",
+    "@headlessui/react": "^2.0.4",
     "@tailwindcss/typography": "^0.5.10",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.9.1",
     "astro-icon": "next",
     "astro-robots-txt": "^1.0.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.10",
     "howler": "^2.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "sharp": "^0.32.6",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
