--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^7.12.0",
+    "eslint": "^9.4.0",
+    "eslint-plugin-astro": "^1.2.0",
     "prettier": "^3.3.0",
     "prettier-plugin-astro": "^0.14.0",
     "prettier-plugin-tailwindcss": "^0.6.1"
