--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,10 @@
     "allowImportingTsExtensions": true,
     "baseUrl": ".",
     "paths": {
+      "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
       "@assets/*": ["src/assets/*"]
     }
   },
-  "noEmit": true,
+  "noEmit": true
 }
