--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.11.3",
+    "astro-expressive-code": "^0.35.3",
     "astro-icon": "^1.1.0",
     "astro-robots-txt": "^1.0.0",
     "clsx": "^2.1.1",
