--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
-    "@astrojs/mdx": "^3.1.4",
+    "@astrojs/mdx": "^3.1.5",
     "@astrojs/react": "^3.6.2",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
@@ -24,8 +24,8 @@
     "@tailwindcss/typography": "^0.5.10",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
-    "astro": "^4.14.5",
-    "astro-expressive-code": "^0.35.3",
+    "astro": "^4.14.6",
+    "astro-expressive-code": "0.36.0",
     "astro-icon": "^1.1.0",
     "astro-robots-txt": "^1.0.0",
     "clsx": "^2.1.1",
